# ChangeLog for sys-power/cpufrequtils
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/cpufrequtils/ChangeLog,v 1.27 2006/07/13 19:03:02 phreak Exp $

  13 Jul 2006; Christian Heim <phreak@gentoo.org> metadata.xml,
  cpufrequtils-001.ebuild, cpufrequtils-002.ebuild:
  Fixing Quotation; Taking temporary maintainership

  25 Jun 2006; Henrik Brix Andersen <brix@gentoo.org>
  -files/cpufrequtils-0.4-conf.d, -files/cpufrequtils-0.4-init.d,
  -cpufrequtils-0.4.ebuild:
  Pruned old ebuild.

  13 Jun 2006; Danny van Dyk <kugelfang@gentoo.org> cpufrequtils-001.ebuild:
  Marked stable on amd64.

  05 Jun 2006; Henrik Brix Andersen <brix@gentoo.org>
  +files/cpufrequtils-002-parallel-make.patch, cpufrequtils-002.ebuild:
  Fix compilation with parallel make, bug #135521.

*cpufrequtils-002 (01 Jun 2006)

  01 Jun 2006; Henrik Brix Andersen <brix@gentoo.org>
  +files/cpufrequtils-002-conf.d, +files/cpufrequtils-002-init.d,
  +cpufrequtils-002.ebuild:
  Version bump. Fixed init script to work on SMP systems, thanks to Sebastien
  LANGE and Stefano Varesi in bug #132461.

  24 May 2006; Michael Hanselmann <hansmi@gentoo.org>
  cpufrequtils-001.ebuild:
  Stable on ppc.

  26 Apr 2006; Henrik Brix Andersen <brix@gentoo.org>
  cpufrequtils-001.ebuild:
  Stable on x86.

  05 Apr 2006; Scott Stoddard <deltacow@gentoo.org> cpufrequtils-001.ebuild:
  Multilib fix to ensure correct library install path.

*cpufrequtils-001 (26 Mar 2006)

  26 Mar 2006; Henrik Brix Andersen <brix@gentoo.org>
  +files/cpufrequtils-001-conf.d, +files/cpufrequtils-001-init.d,
  +cpufrequtils-001.ebuild:
  Version bump.

  13 Feb 2006; Henrik Brix Andersen <brix@gentoo.org>
  -files/cpufrequtils-0.3-conf.d, -files/cpufrequtils-0.3-init.d,
  -cpufrequtils-0.3-r1.ebuild:
  Pruned old ebuild.

  24 Jan 2006; Patrick McLean <chutzpah@gentoo.org> cpufrequtils-0.4.ebuild:
  Stable on amd64; bug #119926.
