@@ -1,26 +1,43 @@
 #!/sbin/runscript
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/cpufrequtils/files/cpufrequtils-002-init.d,v 1.1 2006/06/01 12:02:01 brix Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/cpufrequtils/files/cpufrequtils-002-init.d,v 1.2 2006/07/16 09:43:37 phreak Exp $
 
 checkconfig() {
 	if [ -z "${GOVERNOR}" ]; then
 		eerror "No governor set in /etc/conf.d/cpufrequtils"
 		return 1
 	fi
+	if [ -z "${RESTORED_GOVERNOR}" ]; then
+		RESTORED_GOVERNOR=performance
+	fi
 }
 
-start() {
+
+affect_change() {
+	if [ "$#" != "2" ]; then
+		eerror "affect_change called in correctly, need two args, action, and governor"
+		return 1
+	fi
 	local cpu n
 
-	checkconfig || return 1
-
 	for cpu in /sys/devices/system/cpu/*; do
-		n=$(basename ${cpu})
+		n=${cpu##*/}
 		n=${n/cpu/}
 
-		ebegin "Enabling ${GOVERNOR} cpufreq governor on CPU${n}"
-		cpufreq-set -c ${n} -g ${GOVERNOR}
+		ebegin "${1} ${2} cpufreq governor on CPU${n}"
+		cpufreq-set -c ${n} -g "${2}"
 		eend ${?}
 	done
+}
+
+
+start() {
+	checkconfig || return 1
+	affect_change "Enabling" "${GOVERNOR}"
+}
+
+stop() {
+	checkconfig || return 1
+	affect_change "Disabling" "${RESTORED_GOVERNOR}"
 }
