@@ -1,0 +1,3 @@
+MD5 93291a0d705ee2e19a6d7491b223c9f2 cpufrequtils-002.tar.bz2 35313
+RMD160 da4477af89116d78cbe92e55247cee3f1d1b9f73 cpufrequtils-002.tar.bz2 35313
+SHA256 98be6a75f06c535d0acc6948bb1b923c7c400c038c433acfa074c14c89edc39b cpufrequtils-002.tar.bz2 35313
